# lighting-attributes

./: .gitignore
cmake/modules/: FindLumiverse.cmake
scenes/: single_area_box.ass  single_area_box.mb  single_area_box.rig.json  single_area_box2.ass  single_area_box3.ass  test.ass
source/: CMakeLists.txt  featureGen.cpp  render.cpp  sampleGen.cpp  sampleTools.cpp  sampleTools.h  sceneGen.cpp
